--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "html-webpack-plugin": "2.29.0",
     "ignore-styles": "^5.0.1",
     "jest": "20.0.4",
+    "md5-file": "^4.0.0",
     "morgan": "^1.9.0",
     "nodemon": "^1.17.5",
     "npm-run-all": "^4.1.3",
@@ -56,6 +57,7 @@
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
+    "universal-cookie": "^2.2.0",
     "url-loader": "0.6.2",
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
@@ -64,7 +66,7 @@
   },
   "scripts": {
     "start:browser": "node scripts/start.js",
-    "start:server": "node_modules/.bin/nodemon src/server.js",
+    "start:server": "NODE_ENV=development node_modules/.bin/nodemon src/server.js",
     "start": "NODE_ENV=development run-p start:browser start:server",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom"
@@ -110,5 +112,8 @@
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "devDependencies": {
+    "babel-plugin-transform-react-jsx": "^6.24.1"
   }
 }
